src/styles/home.sass
.home
    display: flex
    justify-content: space-between
    align-items: center
    flex-flow: column
    width: 100%

    .hero
        justify-content: center

        @media screen and (min-width:300px)
            height: auto
            width: 50%

    .news

        @media screen and (min-width:374px)
            display: flex
            flex-flow: column
            border-radius: .8em
            padding: 2em
            gap: 1em
            margin: 0
            font-size: 1.5rem
            section
                display: flex
                flex-flow: column
                justify-content: center
                align-items: center
                line-height: 100%

        @media screen and ( min-width:720px  )
            gap: 3em
            padding: 5em
            flex-flow: row

